<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_logs"
        android:icon="@drawable/ic_whatshot_black_24dp"
        android:title="@string/title_logs" />

    <item
        android:id="@+id/navigation_gear"
        android:icon="@drawable/ic_store_black_24dp"
        android:title="@string/title_gear" />

    <item
        android:id="@+id/navigation_huntcast"
        android:icon="@drawable/ic_show_chart_black_24dp"
        android:title="@string/title_huntcast" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_place_black_24dp"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_me"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_me" />





</menu>
